# EWMHlib

./: .gitignore  AUTHORS.txt  CHANGES.txt  README.md  TODO.txt  docstrings.md  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yml  type-checking.yml
docs/source/: conf.py
src/ewmhlib/: __init__.py  _ewmhlib.py  _main.py
src/ewmhlib/Props/: __init__.py  _props.py
src/ewmhlib/Structs/: __init__.py  _structs.py
tests/: test_ewmhlib.py
