[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/Kalmat/EWMHlib"
Repository = "https://github.com/Kalmat/EWMHlib.git"
Issues = "https://github.com/Kalmat/EWMHlib/issues"
Changelog = "https://github.com/Kalmat/EWMHlib/blob/HEAD/CHANGES.txt"
Documentation = "https://ewmhlib.readthedocs.io/"

[project]
name = "EWMHlib"
version = "0.2"
description = "Extended Window Manager Hints implementation in Python 3"
authors = [
    { name = "Kalmat", email = "palookjones@gmail.com" }
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
requires-python = ">=3.9"
keywords=[
    "ewmh",
    "Extended-Window-manager-hints",
    "window-manager",
    "window",
    "manager",
    "hints",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-xlib>=0.21; sys_platform == 'linux'",
    "typing_extensions>=4.4.0",
]

[dependency-groups]
docs = [
    "myst-parser",
]
dev = [
    { include-group = "docs" },
    "mypy>=0.990,<2",
    "ruff>=0.15.16",
    "types-python-xlib>=0.32",
]

[tool.uv]
exclude-newer = "1 week"
